--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.2",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "ngx-captcha": "^6.2.1",
+    "ngx-modal": "0.0.29",
     "ngx-modal-dialog": "^3.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
